--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Proyectos Ingenieria Software Angel Tepetla Desarrollador">
 	<link rel="icon" type="image/png" href="./imgen/bitmap.ico" sizes="32x32">
 
-	<title>CV Online</title>
+	<title>Ángel Tepetla | CV</title>
 
 
 
@@ -21,16 +21,19 @@
 
 
 	<link rel="stylesheet" href="./angel/estilos_test.css">
+	
+	<!--
 	<link rel="stylesheet" href="./angel/examplse.css">
-
+-->
 
 	<script type="text/javascript" defer="" src="./dist/web_test.js"></script>
 	<script type="text/javascript" defer="" src="./angel/example.js"></script>
 
 	<link rel="stylesheet" href="./Stuhl_files/font-awesome.min.css">
 	
-	<link rel="stylesheet" type="text/css" href="./angel/fullspage.css" />
 	<!--
+	<link rel="stylesheet" type="text/css" href="./angel/fullspage.css" />
+	
 	<link rel="stylesheet" type="text/css" href="./Stuhl_files/fonts.css">
 
 	<link rel="stylesheet" href="./Stuhl_files/startseite.css">
@@ -67,7 +70,7 @@
 
 			    <br><br><br>
 
-				<h2 class="h22g1" id="clie"><span id="cliente">¡Hola entusiasta!</span></h2>
+				<h2 class="h22g1" id="clie"><span id="cliente">¡Hola!</span></h2>
 
 
 			    </section>
@@ -85,7 +88,7 @@
 	    			<p class="titulo">Me llamo <b>Ángel</b> </p>
 					<p class="texto_cuadro">Soy estudiante de ingeniería mecatrónica, me guío por la cultura de la excelencia y estoy en constante actualización. Apasionado por el mundo de la programación y del diseño en ingeniería. Gracias a mi gran iniciativa y creatividad, he podido participar en diversos proyectos reales de carácter extracurricular. He colaborado como diseñador, programador, gestor de proyectos y coordinador de actividades. Mis habilidades de liderazgo han permitido destacar a los equipos y a los proyectos a mi cargo.
 					<ul class="about animated fadeIn">          
-			          <li class="nol" id="mouse_1">¡Acerca el mouse a la imagen!</li>
+			          <li class="nol" id="mouse_1">¡!</li>
 			         </ul> 
 			        </p>
 	    		</div>
@@ -107,9 +110,9 @@
 	    	<section class="texto_marco_2" id="text22">
 	    		<div class="my_texto_2">
 	    			<p class="titulo_2">¡Quiero ser<b class="dos"> becario!</b> </p>
-					<p class="texto_cuadro_2">En el aréa de empaque y producción de Resirene. Mis habilidades prácticas me convierten en uno de los mejores candidatos que tú estas buscando. Mi meta tras finalizar mis estudios es seguir cultivando y potenciando mis habilidades profesionales en una empresa lider en su sector como esta.
+					<p class="texto_cuadro_2">En el aréa de diseño e ingeniería. Mis habilidades prácticas me convierten en uno de los mejores candidatos que tú estas buscando. Mi meta tras finalizar mis estudios es seguir cultivando y potenciando mis habilidades profesionales en una empresa lider en su sector.
 					<ul class="about animated fadeIn">          
-			        	<li class="nol" id="mouse_2">¡Acerca el mouse a la imagen!</li>
+			        	<li class="nol" id="mouse_2">¡!</li>
 			        </ul> 
 			        </p>
 	    		</div>
@@ -129,17 +132,19 @@
 	    	<section class="texto_marco_2" id="text22">
 	    		<div class="my_texto_2">
 	    			<p class="titulo_2">Soy<b class="dos"> estudiante</b> </p>
-					<p class="texto_cuadro_2">Actualmente estoy cursando 7° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, la eléctronica y la automatización. Me considero desde siempre un joven autodidacta, y sé que puedo aportar buenas ideas en Resirene, pues tengo habilidades que me he comprometido a desarrollar durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
+					<p class="texto_cuadro_2">Actualmente estoy cursando 9° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, la eléctronica y la automatización. Me considero desde siempre un joven autodidacta, y sé que puedo aportar buenas ideas en la empresa, pues tengo habilidades que me he comprometido a desarrollar durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
 					<ul class="about animated fadeIn">          
+					<li class="nol">Beca 'Los mejores 1000' 2018. </li>
 			        	<li class="nol">Certificación Internacional CSWA. </li>
 			        	<li class="nol">Proactividad. </li>
 			        	<li class="nol">Creatividad. </li>
 			        	<li class="nol">Liderazgo. </li>
 			        	<li class="nol">Diseño web (yo diseñe esta web). </li>
 			        	<li class="nol">Creación de <b class="dos">mB</b>. </li>
-
-			        	<li class="nol">Mezclador de pintura.</li>
+					<li class="nol">Reconocimiento de patrones. </li>
+			        	<li class="nol">Mezclador de pintura RGB.</li>
 			        	<li class="nol">Electromiografia.</li>
+					
 			        	<li class="nol">Prototipo que sube escaleras.</li>
 			        	<li class="nol">Control de fase industrial.</li>
 			        	<li class="nol">App: Calcoli Elettrici</li>
