--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			</section>
 
 			<div class="my_imagen_2" id="">
-				<img class="imagen_foto" src="./angel/res_logo.jpg"><span class="hover_marca">¡Quiero ser becario! <img src="imgen/icono.png" width="22" height="22">  </span>
+				<img class="imagen_foto" src="./angel/res_logo.jpg"><span class="hover_marca">¡Quiero ser becario! <img src="./angel/icono.png" width="22" height="22">  </span>
 			</div>
 
 
@@ -156,7 +156,7 @@
 			</section>
 
 			<div class="my_imagen_2" id="">
-				<img class="imagen_foto_c" src="./angel/upt.jpg"><span class="hover_marca">¡Estoy estudiando aquí!</span>
+				<img class="imagen_foto_c" src="./data/upt.jpg"><span class="hover_marca">¡Estoy estudiando aquí!</span>
 			</div>
 
 
