--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 			    <br><br><br>
 
-				<h2 class="h22"><span class="spann"> ÁNGEL TEPETLA</span><br>UN APASIONADO<br>EN EL INCREIBLE MUNDO DE<br>LA
+				<h2 class="h22"><span class="spann"> ÁNGEL TEPETLA</span><br>UN APASIONADO<br>EN EL INCREÍBLE MUNDO DE<br>LA
 				<span id="nombre" class="spann namy">INGENIERÍA</span></h2>
 
 			    </section>
@@ -176,7 +176,12 @@
 
 		    	<section class="texto_marco_2" id="text22">
 		    		<div class="my_texto_2">
-		    			<p class="titulo_2">Soy<b class="dos"> estudiante</b> </p>
+
+		    			<div class="divSec3">
+		    				<p class="titulo_2h cambiaSec3" id="tepetla">Soy<b class="dos"> estudiante</b> </p>
+		    				<p class="titulo_2h cambiaSec3" id="inactivo_1">Soy<b class="dos"> Anglet</b> </p>
+		    			</div>
+
 						<p class="texto_cuadro_2">Actualmente estoy cursando 9° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, la eléctronica y la automatización. Me considero desde siempre un joven autodidacta, y sé que puedo aportar buenas ideas en Resirene, pues tengo habilidades que me he comprometido a desarrollar durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
 						<ul class="about animated fadeIn">
 				        	<li class="nol">Beca 'Los mejores 1000' 2018. </li>
@@ -206,15 +211,24 @@
 
 
 
-	    <div class="section">
+	    <div class="section" id="fin">
 
 			  <footer class="footer" id="contacto">
 			  	<div class="top animated fadeIn rt2sss">
 
 
 						<div class="my_texto_footer">
-					    	<p class="titulo_footer">Soy<b> Ángel Tepetla</b> </p>
-							<p class="texto_footer"><span>Uno de los futuros grandes ingenieros de México.</span><br><br> <br>¿Quieres saber más de mi? Te invito a contactarme y a que agendemos una entrevista. <br>Descarga mi CV en formato PDF en el primer icono.</p>
+
+							<!--
+							<div class="div_cambia">
+								<p class="titulo_footeyr cambia" id="tepetla">Soy<b> Ángel Tepetla</b> </p>
+					    		<p class="titulo_footeyr cambia" id="inactivo_1">Soy<b> Yo</b> </p>
+							</div>
+						-->
+							<p class="titulo_footer" id="t">Soy<b> Ángel Tepetla</b> </p>
+
+
+							<p class="texto_footer"><span>Uno de los futuros grandes</span> <span id="tipo_yo">ingenieros</span> <span>de México.</span><br><br> <br>¿Quieres saber más de mi? Te invito a contactarme y a que agendemos una entrevista. <br>Descarga mi CV en formato PDF en el primer icono.</p>
 					    </div>
 
 
