--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <script type="text/javascript" defer="" src="./data/prueba.js"></script>
     <link rel="stylesheet" href="./data/prueba.css">
 
+
+    <meta name="theme-color" content="#131724">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#131724">
+
 </head>
 
 
