--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 	<link rel="stylesheet" href="./data/estilos_19.css">
-	<script type="text/javascript" defer="" src="./data/web_test.js"></script>
+	<script type="text/javascript" defer="" src="./data/web_tesjt.js"></script>
 	<script type="text/javascript" defer="" src="./data/example.js"></script>
 	<link rel="stylesheet" href="./data/font-awesome.min.css">
 
@@ -134,6 +134,8 @@
 		</div>
 
 
+
+
 		<div class="section">
 
 		    	<section class="texto_marco" id="text22">
@@ -148,9 +150,9 @@
 				</section>
 
 				<div class="my_imagen" id="">
-					<img class="imagen_foto" src="./angel/we6ed.jpg"><span class="hover_marca">¡Este soy yo!</span>
+					<img class="imagen_foto" src="./data/we4.jpg"><span class="hover_marca">¡Este soy yo!</span>
 				</div>
-
+<!-- we6ed-->
 		</div>
 
 
@@ -297,10 +299,10 @@
 
 <script type="text/javascript" src="./data/fullpage.js"></script>
 
-
-<script src="./angel/jquery.min.js"></script>
-<script src="./angel/jquery-ui.min.js"></script>
-
+<!--
+<script src="./data/jquery.min.js"></script>
+<script src="./data/jquery-ui.min.js"></script>
+-->
 
 </body>
 </html>
