--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Proyectos Ingenieria Software Angel Tepetla Desarrollador">
 	<link rel="icon" type="image/png" href="./data/bitmap.ico" sizes="32x32">
 
-	<title>Ángel Tepetla | CV</title>
+	<title>Ángel Tepetla | Ingeniero Mecatrónico</title>
 
 
 
@@ -98,6 +98,12 @@
 			background-image: url(we18.png);
 		}
 
+		#wall{
+			background-image: url(./data/upt_medio.jpg);
+			background-size: cover;
+			background-repeat: no-repeat;
+		}
+
 	</style>
 
   <!--
@@ -140,7 +146,7 @@
 
 		    	<section class="texto_marco" id="text22">
 		    		<div class="my_texto">
-		    			<p class="titulo">Me llamo <b>Ángel</b> </p>
+		    			<p class="titulo titAngel">Me llamo <b class="nAngel">Ángel</b> </p>
 						<p class="texto_cuadro">Soy estudiante de ingeniería mecatrónica, me guío por la cultura de la excelencia y estoy en constante actualización. Apasionado por el mundo de la programación y del diseño en ingeniería. Gracias a mi gran iniciativa y creatividad, he podido participar en diversos proyectos reales de carácter extracurricular. He colaborado como diseñador, programador, gestor de proyectos y coordinador de actividades. Mis habilidades de liderazgo han permitido destacar a los equipos y a los proyectos a mi cargo.
 						<ul class="about animated fadeIn">
 				          <li class="nol" id="mouse_1">¡!</li>
@@ -154,6 +160,11 @@
 				</div>
 <!-- we6ed-->
 		</div>
+
+
+
+
+
 
 
 
