--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 				    <label class="tm fa fa-bars menu-button" for="menu-bar" ></label>
 					<nav class="menu">
 						<ul class="navy navbar-navy">
-				        	<li class=""><a href="##" target="_blank">Portada</a></li>
+				        	<li class=""><a href="https://github.com/AngelTepetla" target="_blank"Repositorio</a></li>
 				        	<li class="active"><a href="##"  class="active">Inicio</a></li>
-					        <li><a href="##">Proyectos</a></li>
+					        <li><a href=https://github.com/AngelTepetla">Proyectos</a></li>
 					        <li class="submenu"><a class="sub" href="##">Más</a>
 						<ul class="no-pad">
 					             <li><a href="##">Tecnología</a></li>
