--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 				    <label class="tm fa fa-bars menu-button" for="menu-bar" ></label>
 					<nav class="menu">
 						<ul class="navy navbar-navy">
-				        	<li class=""><a href="https://github.com/AngelTepetla" target="_blank"Repositorio</a></li>
+				        	<li class=""><a href="https://github.com/AngelTepetla" target="_blank">Repositorio</a></li>
 				        	<li class="active"><a href="##"  class="active">Inicio</a></li>
-					        <li><a href=https://github.com/AngelTepetla">Proyectos</a></li>
+					        <li><a href="https://github.com/AngelTepetla">Proyectos</a></li>
 					        <li class="submenu"><a class="sub" href="##">Más</a>
 						<ul class="no-pad">
 					             <li><a href="##">Tecnología</a></li>
@@ -196,11 +196,11 @@
 
 		    			<div class="divSec3">
 		    				<p class="titulo_2h cambiaSec3" id="tepetla">Soy<b class="dos"> estudiante</b> </p>
-		    				<p class="titulo_2h cambiaSec3" id="inactivo_1">Soy<b class="dos"> Anglet</b> </p>
+		    				<p class="titulo_2h cambiaSec3" id="inactivo_1">Soy<b class="dos"> Ángel</b> </p>
 		    			</div>
 
 
-						<p class="texto_cuadro_2">Actualmente estoy cursando 9° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, la eléctronica y la automatización. Me considero desde siempre un joven autodidacta, y sé que puedo aportar buenas ideas en Resirene, pues tengo habilidades que me he comprometido a desarrollar durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
+						<p class="texto_cuadro_2">Actualmente estoy cursando 9° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, la eléctronica y la automatización. Me considero desde siempre un joven autodidacta, y sé que puedo aportar buenas ideas en la empresa, pues tengo habilidades que me he comprometido a desarrollar durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
 						<ul class="about animated fadeIn">
 				        	<li class="nol">Beca 'Los mejores 1000' 2018. </li>
 				        	<li class="nol">Creación de <b class="dos">mB</b>. </li>
