--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 							<p class="titulo_footer" id="t">Soy<b> Ángel Tepetla</b> </p>
 
 
-							<p class="texto_footer"><span>Uno de los futuros grandes</span> <span id="tipo_yo">ingenieros</span> <span>de México.</span><br><br> <br>¿Quieres saber más de mi? Te invito a contactarme y a que agendemos una entrevista. <br>Descarga mi CV en formato PDF en el primer icono.</p>
+							<p class="texto_footer"><span>Uno de los futuros grandes</span> <span id="tipo_yo">ingenieros</span> <span>de México.</span><br><br> <br>¿Quieres saber más de mi? Contacta conmigo, yo invito el café. <br>Descarga mi CV en formato PDF en el primer icono.</p>
 					    </div>
 
 
