--- a/index.html
+++ b/index.html
@@ -164,6 +164,27 @@
 
 
 
+		<div class="section" id="wall">
+
+			<div class="contenedorSec2" id="wadll">
+
+				<div class="sub1">
+					<p>One</p>
+					<img src="./data/cswa.png" width="160" class="subImg">
+					<img src="./data/activate.png" width="160" class="subImg">
+				</div>
+
+				<div class="sub2">
+					<p>Two</p>
+					<img src="./data/beca.png" width="160" class="subImg">
+					<img src="./data/activado.svg" width="160" class="subImg">
+				</div>
+
+
+
+			</div>
+
+		</div>
 
 
 
