--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
 
 		<div class="section" id="wall">
 
+<!--
 			<div class="contenedorSec2" id="wadll">
+
 
 				<div class="sub1">
 					<p>One</p>
@@ -183,7 +185,7 @@
 
 
 			</div>
-
+-->
 		</div>
 
 
@@ -221,7 +223,7 @@
 		    			</div>
 
 
-						<p class="texto_cuadro_2">Actualmente estoy cursando 9° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, la eléctronica y la automatización. Me considero desde siempre un joven autodidacta, y sé que puedo aportar buenas ideas en la empresa, pues tengo habilidades que me he comprometido a desarrollar durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
+						<p class="texto_cuadro_2">Actualmente estoy cursando 9° cuatrimestre de ingeniería mecatrónica. Me apasiona el mundo de la programación, eléctronica y automatización. Me considero desde siempre un autodidacta, me he comprometido a desarrollar mis habilidades durante toda mi vida para ser mejor cada día. Ultimamente puedo destacar esto:<!--Me atrevo a decir que soy uno de los mejores de mi carrera, pero eso no es suficiente para mí, -->
 						<ul class="about animated fadeIn">
 				        	<li class="nol">Beca 'Los mejores 1000' 2018. </li>
 				        	<li class="nol">Creación de <b class="dos">mB</b>. </li>
