--- a/caw.html
+++ b/caw.html
@@ -63,11 +63,11 @@
 			  	<section class="textog1" id="text1">
 
 			    <br><br><br>
-			    <audio id="audio" src="./angel/notification.mp3"></audio>
-			    <audio id="audio_02" src="./angel/notification2.mp3"></audio>
-			    <audio id="audio_03" src="./angel/coin.mp3"></audio>
-			    <audio id="audio_04" src="./angel/pacman.mp3"></audio>
-			    <audio id="audio_05" src="./angel/ganar.mp3"></audio>
+			    <audio id="audio" src="./data/notification.mp3"></audio>
+			    <audio id="audio_02" src="./data/notification2.mp3"></audio>
+			    <audio id="audio_03" src="./data/coin.mp3"></audio>
+			    <audio id="audio_04" src="./data/pacman.mp3"></audio>
+			    <audio id="audio_05" src="./data/ganar.mp3"></audio>
 
 				<h2 class="h22g1" id="clie"><span id="cliente" style="text-align: center;">¡Hola, tú seras el primero!</span></h2>
 				<div class="botonConte">
