--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<nav class="menu">
 						<ul class="navy navbar-navy">
 				        	<li class=""><a href="https://github.com/AngelTepetla" target="_blank">Repositorio</a></li>
-				        	<li class="active"><a href="##"  class="active">Inicio</a></li>
+				        	<li class="active" id="li_activa"><a href="##"  class="active">Inicio</a></li>
 					        <li><a href="https://github.com/AngelTepetla">Proyectos</a></li>
 					        <li class="submenu"><a class="sub" href="##">Más</a>
 						<ul class="no-pad">
@@ -83,7 +83,7 @@
 
 			    <br><br><br>
 
-				<h2 class="h22"><span class="spann"> ÁNGEL TEPETLA</span><br>UN APASIONADO<br>EN EL INCREÍBLE MUNDO DE<br>LA
+				<h2 class="h22"><span class="spann" id="mi_nombre"> ÁNGEL TEPETLA</span><br><span class="spann_light">UN APASIONADO</span><br><span class="spann_light">EN EL INCREÍBLE MUNDO DE</span><br>LA
 				<span id="nombre" class="spann namy">INGENIERÍA</span></h2>
 
 			    </section>
