--- a/index.html
+++ b/index.html
@@ -82,9 +82,13 @@
 			  	<section class="textog" id="text1">
 
 			    <br><br><br>
-
+<!--
 				<h2 class="h22"><span class="spann" id="mi_nombre"> ÁNGEL TEPETLA</span><br><span class="spann_light">UN APASIONADO</span><br><span class="spann_light">EN EL INCREÍBLE MUNDO DE</span><br>LA
 				<span id="nombre" class="spann namy">INGENIERÍA</span></h2>
+-->
+				<h2 class="h22"><span class="spann" id="mi_nombre">Ángel Tepetla</span><br>
+				<span id="nombre" class="spann namy">Soy Ingeniero Mecatrónico.</span></h2>
+
 
 			    </section>
 			</section>
