--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
 
 	<link rel="stylesheet" href="./data/estilos_19.css">
+
+	<!--
 	<script type="text/javascript" defer="" src="./data/web_tesjt.js"></script>
-	<script type="text/javascript" defer="" src="./data/example.js"></script>
+	<script type="text/javascript" defer="" src="./data/example.js"></script> -->
 	<link rel="stylesheet" href="./data/font-awesome.min.css">
 
 
@@ -110,34 +112,13 @@
 
 	</style>
 
-  <!--
-<section class="contenedorg1" id="contg1">
-			  	<section class="texg1" id="tex1">
 
-			    <br><br><br>
-
-				<h2 class="h22g1" id="clie"><span id="cliente">¡Hola!</span></h2> <br>
-			    <p class="titulo">Me llamo <b id="nombre" class="namy">Ángel</b> </p>
-				<p class="">Soy estudiante de ingeniería mecatrónica, me guío por la cultura de la excelencia y estoy en constante actualización. Apasionado por el mundo de la programación y del diseño en ingeniería. Gracias a mi gran iniciativa y creatividad, he podido participar en diversos proyectos reales de carácter extracurricular. He colaborado como diseñador, programador, gestor de proyectos y coordinador de actividades. Mis habilidades de liderazgo han permitido destacar a los equipos y a los proyectos a mi cargo.</p>
-
-			    </section>
-			</section>
-
-			<section class="contenedorg" id="contg">
-    <section class="textog" id="text1">
-
-
-
-    	<br><br><br>
-	<h2 class="h22"><span class="spann"> ÁNGEL TEPETLA</span><br>UN APASIONADO<br>EN EL INCREIBLE MUNDO DE<br>LA
-				<span class="spann">INGENIERÍA</span></h2>
-
-
-    </section>
-  </section>
-  -->
 
 		</div>
+
+
+
+
 
 		<div class="firmaCover" id="firma_yo">
 			<img class="imagen_firma" src="./data/firma_yo.png">
@@ -145,25 +126,43 @@
 
 
 
+	<section class="contenedor" id="cont1">
 
-		<div class="section">
+		<section class="texto" id="text1">
+			<p class="titulo titAngel">Hola, soy <b class="nAngel">Ángel</b></p><br>
+			<p class="texto_cuadro">Soy alumno de ingeniería mecatrónica (en período de prácticas profesionales), me guío por la cultura de la excelencia y estoy en constante actualización. Me encanta el mundo de la programación y el diseño en ingeniería. <br><br>Gracias a mis habilidades e iniciativa, he podido participar en diversos proyectos reales de carácter extracurricular; he colaborado como técnico, programador, gestor de proyectos, y he realizado algunas pequeñas actividades de diseño mecánico y eléctronico.</p>
+		</section>
 
-		    	<section class="texto_marco" id="text22">
-		    		<div class="my_texto">
-		    			<p class="titulo titAngel">Me llamo <b class="nAngel">Ángel</b> </p>
-						<p class="texto_cuadro">Soy estudiante de ingeniería mecatrónica, me guío por la cultura de la excelencia y estoy en constante actualización. Apasionado por el mundo de la programación y del diseño en ingeniería. Gracias a mi gran iniciativa y creatividad, he podido participar en diversos proyectos reales de carácter extracurricular. He colaborado como diseñador, programador, gestor de proyectos y coordinador de actividades. Mis habilidades de liderazgo han permitido destacar a los equipos y a los proyectos a mi cargo.
-						<ul class="about animated fadeIn">
-				          <li class="nol" id="mouse_1">¡!</li>
-				         </ul>
-				        </p>
-		    		</div>
-				</section>
-
-				<div class="my_imagen" id="">
-					<img class="imagen_foto" src="./data/we4.jpg"><span class="hover_marca">¡Este soy yo!</span>
-				</div>
-<!-- we6ed-->
+<!--
+		<div class="my_imagen" id="">
+			<img class="imagen_foto" src="./data/we4.jpg"><span class="hover_marca">¡Este soy yo!</span>
 		</div>
+-->
+	</section>
+
+
+
+	<!--  SEPARADOR  -->
+	<section class="contenedor separador" id="contSep">
+	</section>
+
+
+
+
+	<section class="contenedor" id="cont1">
+
+		<section class="texto" id="text1">
+			<p class="titulo titAngel">Algunos <b class="nAngel">Proyectos</b> </p>
+			<p class="texto_cuadro">Soy estudiante de ingeniería mecatrónica, me guío por la cultura de la excelencia y estoy en constante actualización. Apasionado por el mundo de la programación y del diseño en ingeniería. Gracias a mi gran iniciativa y creatividad, he podido participar en diversos proyectos reales de carácter extracurricular. He colaborado como diseñador, programador, gestor de proyectos y coordinador de actividades. Mis habilidades de liderazgo han permitido destacar a los equipos y a los proyectos a mi cargo.</p>
+		</section>
+
+<!--
+		<div class="my_imagen" id="">
+			<img class="imagen_foto" src="./data/we4.jpg"><span class="hover_marca">¡Este soy yo!</span>
+		</div>
+-->
+	</section>
+
 
 
 
@@ -293,7 +292,7 @@
 				              <!--  <h4 class="footer-contacto">Somos digitales, acércate...</h4>  -->
 				              <div class="social-icons">
 
-				                <a href="./data/cv_web.pdf" class="social-icon5" target="_blank"><i class="fa fa-download"></i></a>
+				                <a href="./data/CV_Jose_Angel_Tepetla_4.pdf" class="social-icon5" target="_blank"><i class="fa fa-download"></i></a>
 								<a href="##" class="social-icon5" onclick="celular()"><i class="fa fa-mobile" ></i></a>
 								<a href="http://www.linkedin.com/in/AngelTepetla" class="social-icon5"><i class="fa fa-linkedin"></i></a>
 								<a href="mailto:megadiego1@gmail.com" class="social-icon5"><i class="fa fa-envelope-o"></i></a>
@@ -337,7 +336,6 @@
 	</div>
 
 
-<script type="text/javascript" src="./data/fullpage.js"></script>
 
 <!--
 <script src="./data/jquery.min.js"></script>
