--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
 			<img class="imagen_foto" src="./data/we4.jpg"><span class="hover_marca">¡Este soy yo!</span>
 		</div>
 -->
+
+		<section id="fotos"></section>
+
 	</section>
 
 
@@ -324,7 +327,7 @@
 
 			  	</div> <!-- TOP ANIMATED end .footer -->
 
-		    	<div class="bottom animated fadeIn rt2sss" >&copy; 2016 - 2019 &middot; multiBit <span class="hover_marca">Una marca de Ángel Tepetla</span>
+		    	<div class="bottom animated fadeIn rt2sss" >&copy; 2016 - 2020 &middot; multiBit <span class="hover_marca">Una marca de Ángel Tepetla</span>
 		    	</div> <!-- end .bottom -->
 		      </footer> <!-- end .footer -->
 
