--- a/index (copia).html
+++ b/index (copia).html
@@ -221,21 +221,16 @@
 
 		<div class="loop_marcas" id="marcas">
 			<div class="contenedorSec2" id="wadll">
-				<div class="img_loop_1">
+				<div class="sub1">
+					<p>One</p>
 					<img src="./data/cswa.png" width="160" class="subImg">
-					<span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span>
-				</div>
-				<div class="img_loop_2">
 					<img src="./data/activate.png" width="160" class="subImg">
-					<span class="hover_img hover_img_loop_2">¡Me capacito constantemente!</span>
 				</div>
-				<div class="img_loop_3">
+
+				<div class="sub2">
+					<p>Two</p>
 					<img src="./data/beca.png" width="160" class="subImg">
-					<span class="hover_img hover_img_loop_3">SEPE Tlaxcala 2018</span>
-				</div>
-				<div class="img_loop_4">
 					<img src="./data/activado.svg" width="160" class="subImg">
-					<span class="hover_img hover_img_loop_4">Tres certificados ganados</span>
 				</div>
 			</div>
 		</div>
@@ -320,10 +315,10 @@
 				              <div class="social-icons">
 
 				                <a href="./data/CV_Jose_Angel_Tepetla_4.pdf" class="social-icon5" target="_blank"><i class="fa fa-download"></i></a>
-								<a href="##" class="social-icon_Phone" onclick="celular()"><i class="fa fa-mobile" ></i></a>
-								<a href="http://www.linkedin.com/in/AngelTepetla" class="social-icon_IN"><i class="fa fa-linkedin"></i></a>
-								<a href="mailto:megadiego1@gmail.com" class="social-icon_GM"><i class="fa fa-envelope-o"></i></a>
-								<a href="https://api.whatsapp.com/send?phone=5212226898747" class="social-icon_WA" target="_blank"><i class="fa fa-whatsapp"></i></a>
+								<a href="##" class="social-icon5" onclick="celular()"><i class="fa fa-mobile" ></i></a>
+								<a href="http://www.linkedin.com/in/AngelTepetla" class="social-icon5"><i class="fa fa-linkedin"></i></a>
+								<a href="mailto:megadiego1@gmail.com" class="social-icon5"><i class="fa fa-envelope-o"></i></a>
+								<a href="https://api.whatsapp.com/send?phone=5212226898747" class="social-icon5" target="_blank"><i class="fa fa-whatsapp"></i></a>
 
 								<script>
 								function celular() {
