--- a/index (otra copia).html
+++ b/index (otra copia).html
@@ -129,7 +129,7 @@
 
 		<section class="texto" id="text1">
 			<p class="titulo titAngel">Hola, soy <b class="nAngel">Ángel</b></p><br>
-			<p class="texto_cuadro">Soy alumno de ingeniería mecatrónica (en período de prácticas profesionales), me guío por la cultura de la excelencia y estoy en constante actualización. Me encanta el mundo de la programación y el diseño en ingeniería. <br><br>Gracias a mis habilidades e iniciativa, he podido participar en diversos proyectos reales de carácter extracurricular; he colaborado como técnico, programador, gestor de proyectos, y he realizado algunas pequeñas actividades de diseño mecánico y eléctronico.<br></p>
+			<p class="texto_cuadro">Soy alumno de ingeniería mecatrónica (en período de prácticas profesionales), me guío por la cultura de la excelencia y estoy en constante actualización. Me encanta el mundo de la programación y el diseño en ingeniería. <br><br>Gracias a mis habilidades e iniciativa, he podido participar en diversos proyectos reales de carácter extracurricular; he colaborado como técnico, programador, gestor de proyectos, y he realizado algunas pequeñas actividades de diseño mecánico y eléctronico.</p>
 		</section>
 
 <!--
@@ -137,28 +137,7 @@
 			<img class="imagen_foto" src="./data/we4.jpg"><span class="hover_marca">¡Este soy yo!</span>
 		</div>
 -->
-
-
-
-<!-- /////////////////////////////////////////////////////////////////-->
-		<div class="slider_marcas">
-			<ul>
-				<li class="img_loop_1"> <img src="./data/cswa.png" width="160" class="subImg_02 img_redonda logo">       <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> </li>
-				<li class="img_loop_1"> <img src="./data/activate.png" width="160" class="subImg_02 img_redonda logo">   <span class="hover_img hover_img_loop_1">¡Me capacito constantemente!</span>  </li>
-				<li class="img_loop_1"> <img src="./data/beca.png" width="160" class="subImg_02 img_redonda logo">       <span class="hover_img hover_img_loop_1">SEPE Tlaxcala 2018</span>   </li>
-
-				<li class="img_loop_1"> <img src="./data/activado.svg" width="160" class="subImg_02 img_redonda logo">   <!--  <span class="hover_img hover_img_loop_1">Tres certificados ganados</span>  -->      </li>
-				<li class="img_loop_1"> <img src="./data/activado.svg" width="160" class="subImg_02 img_redonda logo">   <!--  <span class="hover_img hover_img_loop_1">Tres certificados ganados</span>  -->      </li>
-				<li class="img_loop_1"> <img src="./data/activado.svg" width="160" class="subImg_02 img_redonda logo">   <!--  <span class="hover_img hover_img_loop_1">Tres certificados ganados</span>  -->      </li>
-			</ul>
-		</div>
-<!-- /////////////////////////////////////////////////////////////////-->
-
-
-
-
 	</section>
-
 
 
 
@@ -182,24 +161,7 @@
 		</div>
 -->
 
-<!--		<section id="fotos"></section>  -->
-
-<!-- /////////////////////////////////////////////////////////////////-->
-		<div class="slider_marcas">
-			<ul>
-				<li class="img_loop_1"> <img src="./angel/nikan_logo.png" width="160" class="subImg_02 logo_nikan">    <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
-				<li class="img_loop_1"> <img src="./angel/mb_at_logo.png" width="160" class="subImg_02 logo_mb">       <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
-				<li class="img_loop_1"> <img src="./angel/egal_logo.png" width="160" class="subImg_02  logo_egal">     <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
-
-				<li class="img_loop_1"> <img src="./angel/cmt_logo_2.png" width="160" class="subImg_02 logo_nikan">    <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
-				<li class="img_loop_1"> <img src="./angel/ipsei_logo_2.png" width="160" class="subImg_02 logo_ipsei">  <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
-				<li class="img_loop_1"> <img src="./angel/upt_logo_2.png" width="160" class="subImg_02 logo_upt">      <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
-
-			</ul>
-		</div>
-<!-- /////////////////////////////////////////////////////////////////-->
-
-
+		<section id="fotos"></section>
 
 	</section>
 
@@ -257,8 +219,6 @@
 -->
 
 
-<!-- /////////////////////////////////////////////////////////////////-->
-<!--
 		<div class="loop_marcas" id="marcas">
 			<div class="contenedor_Sec_Marcas_01" id="">
 				<div class="img_div_Marcas_01 img_loop_1">
@@ -279,8 +239,22 @@
 				</div>
 			</div>
 
-		</div>  -->
-<!-- /////////////////////////////////////////////////////////////////-->
+			<div class="contenedor_Sec_Marcas_02" id="">
+				<div class="img_div_Marcas_02 img_loop_1_02">
+					<img src="./angel/nikan_logo.png" width="160" class="subImg_02 logo_nikan">
+					<span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span>
+				</div>
+				<div class="img_div_Marcas_02 img_loop_1_02">
+					<img src="./angel/mb_at_logo.png" width="160" class="subImg_02 logo_mb">
+					<span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span>
+				</div>
+				<div class="img_div_Marcas_02 img_loop_1_02">
+					<img src="./angel/upt_logo.png" width="160" class="subImg_02 logo_upt">
+					<span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span>
+				</div>
+			</div>
+		</div>
+
 
 
 <!-- /////////////////////////////////////////////////////////////////-->
@@ -316,7 +290,16 @@
 		</div>
 -->
 
-
+		<div class="slider_marcas">
+			<ul>
+				<li> <img src="./angel/nikan_logo.png" width="160" class="subImg_02 logo_nikan">   </li>
+				<li> <img src="./angel/mb_at_logo.png" width="160" class="subImg_02 logo_mb">      </li>
+				<li> <img src="./angel/egal_logo.png" width="160" class="subImg_02  logo_egal">    </li>
+				<li> <img src="./angel/cmt_logo_2.png" width="160" class="subImg_02 logo_nikan">   </li>
+				<li> <img src="./angel/ipsei_logo_2.png" width="160" class="subImg_02 logo_ipsei"> </li>
+				<li> <img src="./angel/upt_logo_2.png" width="160" class="subImg_02 logo_upt">     </li>
+			</ul>
+		</div>
 
 
 
