--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	<section class="contenedor" id="cont1">
 
 		<section class="texto" id="text1">
-			<p class="titulo titAngel">Algunos <b class="nAngel">Proyectos</b> </p>
+			<p class="titulo titAngel">Algunos <b class="nAngel">Proyectos</b> </p> <br>
 			<p class="texto_cuadro">Soy estudiante de ingeniería mecatrónica, me guío por la cultura de la excelencia y estoy en constante actualización. Apasionado por el mundo de la programación y del diseño en ingeniería. Gracias a mi gran iniciativa y creatividad, he podido participar en diversos proyectos reales de carácter extracurricular. He colaborado como diseñador, programador, gestor de proyectos y coordinador de actividades. Mis habilidades de liderazgo han permitido destacar a los equipos y a los proyectos a mi cargo.</p>
 		</section>
 
@@ -191,7 +191,7 @@
 				<li class="img_loop_1"> <img src="./angel/mb_at_logo.png" width="160" class="subImg_02 logo_mb">       <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
 				<li class="img_loop_1"> <img src="./angel/egal_logo.png" width="160" class="subImg_02  logo_egal">     <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
 
-				<li class="img_loop_1"> <img src="./angel/cmt_logo_2.png" width="160" class="subImg_02 logo_nikan">    <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
+				<li class="img_loop_1"> <img src="./angel/cmt_logo_2.png" width="160" class="subImg_02 logo_cmt">    <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
 				<li class="img_loop_1"> <img src="./angel/ipsei_logo_2.png" width="160" class="subImg_02 logo_ipsei">  <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
 				<li class="img_loop_1"> <img src="./angel/upt_logo_2.png" width="160" class="subImg_02 logo_upt">      <!-- <span class="hover_img hover_img_loop_1">Certified SolidWorks Associate</span> --> </li>
 
