update html name

--- a/serotonina.html
+++ b/serotonina.html
@@ -5,10 +5,10 @@
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="description" content="Proyectos Ingenieria Software Angel Tepetla Desarrollador">
-	<link rel="icon" type="image/png" href="./imgen/bitmap.ico" sizes="32x32">
+	<meta name="description" content="">
+	<link rel="icon" type="image/png" href="./angel/mb.ico" sizes="32x32">
 
-	<title>Intercambio | by mB</title>
+	<title>Serotonina | by mB</title>
 
 
 
@@ -141,8 +141,8 @@
 
 		  
 
-		  <div class="botonConte2 op_hidden">
-			  <button class="bgenerador2" id="botonAdd">by ÁngelT - 2021</button>
+		  <div class="botonConte2">
+			  <button class="bgenerador2" id="botonAdd">Scroll Down</button>
 		  </div>
 
 		  </section>
@@ -242,7 +242,7 @@
 
 		var customNodeCreator = function()
 		{
-			console.log("hola!");
+			//console.log("hola!");
 		}
 
 		const typewriter = new Typewriter('#titulo_fade', 
