cambio color texto scroll

--- a/serotonina.html
+++ b/serotonina.html
@@ -96,12 +96,6 @@
 
 
 	    <div class="section op_hidden" id="contenedor_principal">
-
-
-
-			
-
-
 		</div>
 
 
@@ -142,7 +136,7 @@
 		  
 
 		  <div class="botonConte2">
-			  <button class="bgenerador2" id="botonAdd">Scroll Down</button>
+			  <button class="bgenerador2" id="botonAdd" style="color: #ddd">Scroll Down</button>
 		  </div>
 
 		  </section>
@@ -150,20 +144,12 @@
 	</div>
 
 
-
-
-
-
-
-
-
-
 	    <div class="section op_hidden">
 
 
-<div class="botonConte3 ">
-			  <button class="bgenerador2" id="botonAdd">by ÁngelT - 2021</button>
-		  </div>
+		<div class="botonConte3 ">
+			<button class="bgenerador2" id="botonAdd">by ÁngelT - 2021</button>
+		</div>
 
 
 
@@ -172,7 +158,7 @@
 
 
 		<div class="my_texto_footer">
-	    			<p class="titulo_footer" style="color: white"><b>Bonus</b> </p>
+	    	<p class="titulo_footer" style="color: white"><b>Bonus</b> </p>
 	    </div>
 
 
