cambio color texto scroll

--- a/serotonina.html
+++ b/serotonina.html
@@ -136,7 +136,7 @@
 		  
 
 		  <div class="botonConte2">
-			  <button class="bgenerador2" id="botonAdd" style="color: #ddd">Scroll Down</button>
+			  <button class="bgenerador2" id="botonAdd" style="color: #fff">Scroll Down</button>
 		  </div>
 
 		  </section>
