cambio color texto scroll

--- a/serotonina.html
+++ b/serotonina.html
@@ -130,13 +130,13 @@
 		  </div>
 
 		  <div class="botonConte ">
-			  <button class="bgenerador" id="botonG">Iniciar</button>
+			  <button class="bgenerador" id="botonG">¿Iniciar?</button>
 		  </div>
 
 		  
 
 		  <div class="botonConte2">
-			  <button class="bgenerador2" id="botonAdd" style="color: #fff">Scroll Down</button>
+			  <button class="bgenerador2" id="botonAdde" onClick="window.location.href='serotonina.html##contenedor_fondo'" >Scroll Down</button>
 		  </div>
 
 		  </section>
