--- a/serotonina.html
+++ b/serotonina.html
@@ -136,7 +136,7 @@
 		  
 
 		  <div class="botonConte2">
-			  <button class="bgenerador2" id="botonAdde" onClick="window.location.href='serotonina.html##contenedor_fondo'" >Deslizame</button>
+			  <button class="bgenerador2" id="botonAdde" onClick="window.location.href='serotonina.html##contenedor_fondo'" >Swipe Up!</button>
 		  </div>
 
 		  </section>
