--- a/serotonina.html
+++ b/serotonina.html
@@ -43,6 +43,16 @@
 	<script src="./Stuhl_files/jquery.min.js.descarga"></script>
 	<script src="./Stuhl_files/jquery-ui.min.js.descarga"></script>
 -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-82182123-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-82182123-1');
+	</script>
+
 
 </head>
 
