--- a/serotonina.html
+++ b/serotonina.html
@@ -67,13 +67,14 @@ gtag('config', 'UA-82182123-1');
 
 <body class="" style="">
 
-	<!--∫
-	<ul id="menu">
+
+	<!--<ul id="menu">
 		<li data-menuanchor="contenedor_principal" class="active"><a href="#contenedor_principal">First slide</a></li>
 		<li data-menuanchor="contenedor_div2"><a href="#contenedor_div2">Second slide</a></li>
 		<li data-menuanchor="contenedor_div3"><a href="#contenedor_div3">Third slide</a></li>
 	</ul>
--->
+	-->
+	
 	<div id="fullpage">
 		<section class="sectsion op_hidden" id="contenedor_dna">
 			<main>
