--- a/serotonina.html
+++ b/serotonina.html
@@ -67,6 +67,9 @@ gtag('config', 'UA-82182123-1');
 
 <body class="" style="">
 
+	<section id="texto_inicial">
+		<p class="titulo_inicial" id="" style="color: #1c1c1c">Con cada pregunta, aparece algun elemento. Si algo no se ve, es porque la pregunta no fue respondida.</p>
+	</section>
 
 	<!--<ul id="menu">
 		<li data-menuanchor="contenedor_principal" class="active"><a href="#contenedor_principal">First slide</a></li>
