--- a/serotonina.html
+++ b/serotonina.html
@@ -251,9 +251,9 @@ gtag('config', 'UA-82182123-1');
 			.deleteChars(3)
 			.pauseFor(1000)
 			
-			.typeString('<span class="h2_min">M')
+			.typeString('<span class="h2_min">.')
 			.pauseFor(350)
-			.typeString('<span class="h2_min">U')
+			.typeString('<span class="h2_min">.')
 			.pauseFor(350)
 			.typeString('<span class="h2_min">...')
 
@@ -261,7 +261,7 @@ gtag('config', 'UA-82182123-1');
 
 			.deleteChars(5)
 			.pauseFor(1000)
-    		.typeString(' <span class="proact pro2">Miss</span> You...')
+    		.typeString(' <span class="proact pro2">.</span>...')
 			.callFunction(customNodeCreator)
 
     		.pauseFor(2500)
